modify deprecated method